--- a/report/head.tex
+++ b/report/head.tex
@@ -184,7 +184,7 @@ Dr. Edwin \textsc{Brady} % Supervisor's Name
 %\include{Architecture}
 %\include{ProtocolMonitor}
 \include{Solution}
-\include{ImplementingDHM}
+\include{ProtocolImplementations}
 
 
 
