--- a/report/Conclusion.tex
+++ b/report/Conclusion.tex
@@ -11,5 +11,12 @@ If given more time we would want to expand our DSL to be able to better monitor 
 
 
 \subsection{Future Work}
-After specifying a protocol in our DSL, it would be of great use to be able to generate a model that showed the communication pattern between the participants in the protocol.
-Ideally our DSL would have some form of compile time checks that could check if a consumer had implemented cases for the messages returned from the validators. The compile time errors would then tell us which cases we had not implemented in our consumers. This may not be possible due to the complex nature of the protocol implementation, but is worth researching.
+This paper contains many topics that are worth exploring further. Over the course of this dissertation, we have implemented various protocols and gained a lot of valuable knowledge. Our DSL has seen many changes and new features have been added at an almost consistent pace to solve some of the problems encountered when implementing new protocols.
+
+Areas that are worth looking into are expanding the DSL to make it more natural when defining validators. The validators are still mostly mostly plain Scala code and use no features of Scala to make it look more like natural language. In add
+
+To easier allow for implementing change and allowing new features to be added, our system is not performing to its max potential. It is still in a ``change-friendly'' state where we can make changes without to many consequences. Mainly the state manipulation of the protocol state should be able to perform faster. It would also be interesting to implement the ``Protocol State'' as an actor. In certain cases it should increase performance aswell as provide the possibility for additional features.
+
+%After specifying a protocol in our DSL, it would be of great use to be able to generate a model that showed the communication pattern between the participants in the protocol.
+
+%Ideally our DSL would have some form of compile time checks that could check if a consumer had implemented cases for the messages returned from the validators. The compile time errors would then tell us which cases we had not implemented in our consumers. This may not be possible due to the complex nature of the protocol implementation, but is worth researching.
