--- a/report/bibliographies.bib
+++ b/report/bibliographies.bib
@@ -199,3 +199,11 @@ year = {Anders}
   publisher={Springer}
 }
 
+% Evaluation
+@book{odersky2008programming,
+  title={Programming in scala},
+  author={Odersky, Martin and Spoon, Lex and Venners, Bill},
+  year={2008},
+  publisher={Artima Inc}
+}
+
