--- a/report/head.tex
+++ b/report/head.tex
@@ -68,6 +68,20 @@
   tabsize=3,
 }
 
+\lstset{language=Java,
+  showspaces=false,
+  showtabs=false,
+  breaklines=true,
+  showstringspaces=false,
+  breakatwhitespace=true,
+  commentstyle=\color{pgreen},
+  keywordstyle=\color{pblue},
+  stringstyle=\color{pred},
+  basicstyle=\ttfamily,
+  moredelim=[il][\textcolor{pgrey}]{$$},
+  moredelim=[is][\textcolor{pgrey}]{\%\%}{\%\%}
+}
+
 % Math tools - http://en.wikibooks.org/wiki/LaTeX/Mathematics
 \usepackage{mathtools}
 % Makes links
