--- a/report/Evaluation.tex
+++ b/report/Evaluation.tex
@@ -144,16 +144,66 @@ We feel however that a 20\% cost is acceptable for most applications as we are c
 
 
 \subsection{Bug Discovery}
-
+\subsubsection{Performance tests}
 While running performance test we stumbled upon what we believed to be a bug inside the DSL itself. After the performance testing client had sent around 70 000 messages to the server, it would have a protocol failure. The error was that the server was receiving a message, while the protocols state was in a sending state. We found this strange as the client only sends a message after it has received a message. As our test client was such a simple implementation, we believed the error was perhaps located somewhere within the DSL.
  
 After some debugging of the system, we discovered that the bug was in fact withing the testing client. In our implementation we were accidentally sending an extra message to the server when restarting our counter. After several restarts, the accumulated additional messages would eventually arrive before the server had sent a response.
 
 This error was not discovered when we tested the ``Basic'' implementation, so we had to rerun our performance test for it. This error was only discovered as we were stress testing the system and would most likely not have of been caught if were sending a lower amount of messages.
 
+\subsubsection{Apple's Goto bug}
+Apple's goto bug , Formally labeled as ``CVE-2014-1266'' \cite{bland2014finding} is a bug that occurred because of the duplication of a single line of code.  in Apples SSL can be quickly summarized as the error of duplication of a single line of code. This duplicated line of code prevented a security check from being run. A simplified version of the code can be seen below.
+
+\begin{lstlisting}[style=myScalastyle]
+if ((err = SecurityCheck1())) != 0)
+         goto fail;
+         goto fail; // duplicated line
+if ((err = SecurityCheck2()) != 0) // dead code
+         goto fail;
+\end{lstlisting}
+
+This duplicated line causes the ``SecurityCheck2()'' to never be run. The indentation makes it appear to belong to the first ``if'' statement, but the if statement has no curly braces. If statements without curly braces will only include the first line in the if statement.  In this particular case, skipping the final security check would allow for a man-in-the-middle attack.
+
+The actual cause of why this duplicated line was created was most likely due to a merge gone wrong\footnote{Difference of source after merge: \href{https://gist.github.com/hongrich/9176925}{GitHub.com}}. After developers have made changes to the same source file, they will eventually need to combine them. This is often done by merging the two files together. It was highly likely that the duplication occurred in this process.
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\linewidth]{evaluation/gotodate.png}
+  \caption{Affected systems and patch date of Apple's goto bug \cite{bland2014finding}}
+  \label{fig:gotofail}
+\end{figure}
+
+There are many questions to how this bug could go unnoticed for so long. In figure \ref{fig:gotofail} we can see that the bug existed for some time before being patched. According to Bland, there are many factors that could of caught this error much sooner:
+\begin{itemize}
+  \item Coding Standards (indentation, braces)
+  \item Code branch merging experience
+  \item Code reviews
+  \item Coverage data
+  \item Compiler warnings
+  \item Static analysis warning
+  \item Adequate system testing
+\end{itemize}
+
+The one that perhaps stands out the most is the fact that the compiler should give a warning when ``dead-code'' is discovered. Dead-code is a term used when a code segment will under no circumstances ever be executed. The SecurityCheck2() should of produced such a warning. Granted you must activate the compiler to show these warnings, but all such errors should always be shown.
+
+The second factor that should of caught this error would be a single unit-test. Landon Fuller has demonstrated that all it would take is 5 lines of code to detect the error\footnote{Landon Fuller's test: \href{https://github.com/landonf/Testability-CVE-2014-1266}{GitHub.com}}.
+
+Bland concludes his article by stating that the error occurred due to a poor development culture within Apple. There are many best practices that they have failed to implement and this resulted in the bug.
+
+Considering the issues described above, I do not believe that the implementation of the Wrapper Syntax would of prevented this bug. It could of potentially made the error more detectable as the usage of Validators could make testing easier. Apple did however not create tests for their code, even though it would only take 5 lines of code as shown by Fuller. 
+
+If this bug was included within a Validator, then the Protocol Monitor would not detect this error. The Protocol Monitor is completely reliant on implementation of the Validators being correct. If their validate functions contains errors, then the Protocol Monitor will not be able to detect the errors.
+
+Having stated that my system would not have detected Apple's goto bug, I do believe it could of solved similar errors within a different development team. Writing tests for Validators is such a straightforward process that there is no excuse not to write them. I do however think that these tests would not of been written in this particular case and must agree with Bland. The root of this bug lies not within the tools used, but rather in the culture of the development team.
+
+\subsubsection{Heartbleed}
+Heartbleed\footnote{\href{http://heartbleed.com/}{Heartbleed's Homepage}} was a weakness discovered within the OpenSSL library that would allow for attackers to read the main memory of a system. OpenSSL is an open source cryptographic library for implementing the Secure Socket Layer (SSL) and Transport Layer Security (TLS). It is used by web servers such as Apache and nginx. Data from a web survey\footnote{http://news.netcraft.com/archives/2014/04/02/april-2014-web-server-survey.html}{Netcraft's Web survey}} conducted by Netcraft in 2014, determined that their combined market share was above 60\% when the bug was discovered.
+
+Heartbleed was such a devastating bug as it was a very simple attack, left no traces of an attack and it was a widespread vulnerability. 
+
+
 
 \subsection{Building DSLs with Scala}
-Scala is a powerful language that provides us with much freedom in our creation of a DSL. This freedom is however restrictive in certain areas. Many of these restrictions have been discussed in Section \ref{sec:scala} Scala.
+Scala is a powerful language that provides us with much freedom in our creation of a DSL. This freedom is however restrictive in certain areas. Many of these restrictions have been discussed in section \ref{sec:scala} Scala.
  
 The perhaps most interesting question when evaluating Scala as a host language for a DSL is to ask if it ever got in the way of implementing our DSL the way we wanted to. To answer this question we consider what we would change in our DSL if Scala did not have any restrictions. At the moment of writing, we do not believe that any of the restrictions that Scala has have affected our implementation negatively. If anything our DSL has not taken advantage of the features offered by Scala. Specifically we could use more implicit values and features such as currying \cite{odersky2008programming}. 
 
