Commiting before lab PC crashes again

--- a/report/Abstract.tex
+++ b/report/Abstract.tex
@@ -5,4 +5,4 @@ In this paper we will create a domain specific language to help us manage this c
 
 To test the capabilities of our DSL we have defined and implemented several network protocols. We have created a secure chat server that allows multiple participants to exchange encrypted messages. We have also implemented a HTTP server capable of fulfilling received requests.
 
-The evaluation will primarily focus on the trade-offs that are involved when implementing our DSL. It will cover topics such as performance and the problems that it does and does not solve. We will also discuss whether an implementation of our DSL could of prevented Apple's Goto bug and the OpenSSL Heartbleed bug.
+The evaluation will primarily focus on the trade-offs that are involved when implementing our DSL. It will cover topics such as performance and the problems that it does and does not solve. We will also discuss whether an implementation of our DSL could of prevented Apple's Goto bug more formally known as ``CVE-2014-1266''.
